# aiewf-eval

./: QUICKSTART_CLAUDE_JUDGE.md  README.md  TTFT_BENCHMARK_PROGRESS.md  calculate_ttft_stats.py  compare_judges.py  conversation-generation-prompt.json  convo-test-nova-sonic.py  convo-test.py  judge_transcript_alt.py  judge_transcript_claude_v2.py  khk-notes.md  llms-full.txt  pyproject.toml  requirements.txt  run_ttft_benchmark.sh  single-turn.py  tools_schema.py  turns.py
scripts/: __init__.py  aggregate_existing_runs.py  aggregate_transcript_native.py  archive_runs.py  evaluate_all.py  record_turn_audio.py  run_comprehensive_eval.py  sanity_arg_match_llm.py  summarize_runs.py  tmp_run_all_so_far.py  tts_stopped_assistant_transcript.py
src/multi_turn_eval/: cli.py
src/multi_turn_eval/pipelines/: realtime.py
src/multi_turn_eval/processors/: tts_transcript.py
